--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.1.0 # 공유저장소 사용을 하기 위함(자동 로그인)
   crypto: ^3.0.3 # 정보 암호화를 위함 (사용자 비밀번호 암호화)
   cupertino_icons: ^1.0.2 # iOS 스타일의 위젯 사용을 위함
+  flutter_provider: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
