--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   crypto: ^3.0.3 # 정보 암호화를 위함 (사용자 비밀번호 암호화)
   cupertino_icons: ^1.0.2 # iOS 스타일의 위젯 사용을 위함
   flutter_provider: ^2.1.0
+  elastic_client: ^0.3.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
