--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2 # iOS 스타일의 위젯 사용을 위함
   flutter_provider: ^2.1.0
   elastic_client: ^0.3.15
+  http: ^1.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
