--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   elastic_client: ^0.3.15
   http: ^1.2.1
   table_calendar: ^3.1.2
+  calendar_date_picker2: ^1.1.5
   intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
